--- a/FormValidationExample/index.html
+++ b/FormValidationExample/index.html
@@ -7,21 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link rel="stylesheet" href="form.css">
 </head>
   <body class="container">
     <form action="enviar.php" method="POST" class="row" id="formulario"> <!-- los formulrios siempre con post para que sea mas seguro-->
 
         <label for="nombre" class="col-2">Nombre<span class="requerido">*</span>:</label>
         <input type="text" name="nombre" id="nombre" class="col-4" required>
+        <div class="col-2" id="errorNombre">
+            <span class="error active"> Prueba de error </span>
+        </div>
         <div class="w-100"></div>  
 
         <label for="email" class="col-2">Email<span class="requerido">*</span>:</label>
         <input type="email" name="email" id="email" class="col-4" required>
+        <div class="col-2" id ="errorEmail">
+            <span class="error active"> Prueba de error </span>
+        </div>
         <div class="w-100"></div>
 
         <label for="edad" class="col-2">Edad<span class="requerido">*</span>:</label>
-        <input type="number" name="edad" id="edad" class="col-1" min="18" max="120"required>
+        <input type="number" name="edad" id="edad" class="col-1" min="18" max="120" required>
+        <div class="col-2" id="errorEdad">
+            <span class="error active"> Prueba de error </span>
+        </div>
         <div class="w-100"></div>
 
         <input type="submit" value="enviar" id="submit" class="col-2">
