casi todo hecho

--- a/FormValidationExample/index.html
+++ b/FormValidationExample/index.html
@@ -16,21 +16,21 @@
         <label for="nombre" class="col-2">Nombre<span class="requerido">*</span>:</label>
         <input type="text" name="nombre" id="nombre" class="col-4" required>
         <div class="col-2" id="errorNombre">
-            <span class="error active"> Prueba de error </span>
+            <span class="error">  </span>
         </div>
         <div class="w-100"></div>  
 
         <label for="email" class="col-2">Email<span class="requerido">*</span>:</label>
         <input type="email" name="email" id="email" class="col-4" required>
         <div class="col-2" id ="errorEmail">
-            <span class="error active"> Prueba de error </span>
+            <span class="error"></span>
         </div>
         <div class="w-100"></div>
 
         <label for="edad" class="col-2">Edad<span class="requerido">*</span>:</label>
         <input type="number" name="edad" id="edad" class="col-1" min="18" max="120" required>
         <div class="col-2" id="errorEdad">
-            <span class="error active"> Prueba de error </span>
+            <span class="error"> </span>
         </div>
         <div class="w-100"></div>
 
